--- a/parafusos.html
+++ b/parafusos.html
@@ -50,8 +50,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="index.html">Home</a>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="produtos.html" data-toggle="dropdown-submenu" aria-expanded="true">Produtos
-                    </a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="arruelas.html">Arruelas</a><a class="text-black dropdown-item display-4" href="produtos.html">Estojos / Prisioneiros</a><a class="text-black dropdown-item display-4" href="https://mobirise.co">Fixadores Especiais</a><a class="text-black dropdown-item display-4" href="parafusos.html">Prafusos</a><a class="text-black dropdown-item display-4" href="produtos.html">Porcas</a></div></li><li class="nav-item">
+                </li><li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle display-4" href="produtos.html" data-toggle="dropdown-submenu" aria-expanded="true">Produtos
+                    </a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="arruelas.html">Arruelas</a><a class="text-black dropdown-item display-4" href="produtos.html">Estojos / Prisioneiros</a><a class="text-black dropdown-item display-4" href="https://mobirise.co">Fixadores Especiais</a><a class="text-black dropdown-item display-4" href="parafusos.html">Parafusos</a><a class="text-black dropdown-item display-4" href="produtos.html">Porcas</a></div></li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="sobre.html">Sobre</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="contato.html">Contato</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:+1-234-567-8901">
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section once="footers" class="cid-rBAgHVdfzk" id="footer6-1t">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section once="footers" class="cid-rBAgHVdfzk" id="footer6-1t">
 
     
 
