--- a/sobre.html
+++ b/sobre.html
@@ -51,8 +51,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="index.html">Home</a>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="produtos.html" data-toggle="dropdown-submenu" aria-expanded="true">Produtos
-                    </a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="arruelas.html">Arruelas</a><a class="text-black dropdown-item display-4" href="produtos.html">Estojos / Prisioneiros</a><a class="text-black dropdown-item display-4" href="https://mobirise.co">Fixadores Especiais</a><a class="text-black dropdown-item display-4" href="parafusos.html">Parafusos</a><a class="text-black dropdown-item display-4" href="produtos.html">Porcas</a></div></li><li class="nav-item">
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="produtos.html" aria-expanded="true">Produtos
+                    </a></li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="sobre.html">Sobre</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="contato.html">Contato</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:+1-234-567-8901">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="step1 cid-rBkg8ZYjKB" id="step1-c">
+<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="step1 cid-rBkg8ZYjKB" id="step1-c">
 
     
 
@@ -148,7 +148,7 @@
     </div>
 </section>
 
-<section class="footer3 cid-rBAkoINiOQ mbr-reveal" id="footer3-1x">
+<section class="footer3 cid-rBAkoINiOQ" id="footer3-1x">
 
     
 
@@ -186,7 +186,7 @@
 <br>CEP: 30865-330<br>031 3471-4157 | &nbsp;031 3382-5029<br>contato@thefixadores.com.br<br><br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HsFzgBRyR+JqsCLOnHGNOVI2Q+PAtM9ruK283Fw4zqa6rBS1CNVbZVW7n3hcUipvn4tjqWyCIRUpEfrNjBIXxCNP9AoQZz+dWdffFVpzSNX1KIIXRYk5tdAgRuOcgv+b">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2NNh0YJL1CIaaIVxJ6+1PY/KbXYBmZJ2a47ogyV3g+xakzw0Q74bhcdpjATc2CM8fvY8bFpXyGyrCJck1st1IamSCaXSO1k7vw2sH+M5LLqF5xyfQHs/GS4Cr4ua6LoA">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
