--- a/contato.html
+++ b/contato.html
@@ -53,8 +53,8 @@ Contate-nos. Para receber mais informações, sanar dúvidas ou enviar sugestõe
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="index.html">Home</a>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="produtos.html" data-toggle="dropdown-submenu" aria-expanded="true">Produtos
-                    </a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="parafusos.html">Parafusos</a><a class="text-black dropdown-item display-4" href="produtos.html">Porcas</a></div></li><li class="nav-item">
+                </li><li class="nav-item"><a class="nav-link link text-black display-4" href="produtos.html" aria-expanded="true">Produtos
+                    </a></li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="sobre.html">Sobre</a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="contato.html">Contato</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:+1-234-567-8901">
@@ -64,7 +64,7 @@ Contate-nos. Para receber mais informações, sanar dúvidas ou enviar sugestõe
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section contacts3 cid-rBpRJwPVgZ" id="contacts3-1i">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section contacts3 cid-rBpRJwPVgZ" id="contacts3-1i">
     <!---->
     
     <!---->
@@ -157,7 +157,7 @@ Contate-nos. Para receber mais informações, sanar dúvidas ou enviar sugestõe
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EwnEG4g03PwGPngCIi0j76Wux6t28pfnKR7DZieoZ8w173fYWYLzutq/8009oTXNNeeLaHXeN++IuFSarqj4TRm6zLDIkjJHbf7abA/tVIqtzSCWimOfI65lkHCxtf+2">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7PZTl+A1yYm+NSqGYW0c8vHCU+WrH3CGGkH4p1jMSrldSDjptDxVoWvYhvBkwfQtP4qT2IBz37+H3MTwoRVo1XBM5F1x/JydaPv+q5OgwTuBFp0YqbyMDfJxAuljxUum">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado pelo contato, retornaremos em breve !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -233,7 +233,7 @@ Contate-nos. Para receber mais informações, sanar dúvidas ou enviar sugestõe
 <br>CEP: 30865-330<br>031 3471-4157 | &nbsp;031 3382-5029<br>contato@thefixadores.com.br<br><br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="joXFAJf6igLJq6hZfI2yIFC8vtBPWepGaSOTSOzV3r19kw8La/24OXgyf5qm/DoqAPs+Sx6/t6TS7Lp/rvy8Qe0TwZommSYa8UyOSmsQCEpTJIm0eOCH2h4W2PUWm2PE">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jww7cWJe2b3E60GUCAiJ/IqkjzvUt8mGmFRX4QilvcsZTvDyQFMFrg/NtBo4+n391A7w1Nu5q8Yn8MSHPDeByacfS/5Ip8N7FMPtLG0RfSc5v/EDXfKyqJqXVfKqubmy">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
